# PQC-VPN

./: README.md
client/: package-lock.json  package.json
client/src/: App.jsx  App.tsx  index.css
rust vpn/: Cargo.toml  README.md
rust vpn/benches/: handshake.rs
rust vpn/config/: example.conf
rust vpn/config/test/: test.conf
rust vpn/src/: main.rs
rust vpn/src/config/: mod.rs  settings.rs
rust vpn/src/crypto/: aead.rs  handshake.rs  kex.rs  mod.rs  provider.rs  signature.rs
rust vpn/src/network/: device.rs  mod.rs  peer.rs  routing.rs
server/: Cargo.toml
server/src/: crypto.rs  main.rs  session.rs
vpn-client/: package-lock.json  package.json
vpn-client/src/: App.jsx  index.css
vpn-server/: Cargo.toml
vpn-server/src/: main.rs
