[package]
name = "pqc-vpn"
version = "0.1.0"
edition = "2021"
description = "Post-Quantum Cryptography VPN based on WireGuard"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
# Core dependencies
tokio = { version = "1.32", features = ["full"] }
oqs = "0.8"
bytes = "1.5"
futures = "0.3"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cryptographic dependencies
chacha20poly1305 = "0.10"
blake2 = "0.10"
hkdf = "0.12"
rand = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

# Network dependencies
tun = { version = "0.6", features = ["async"] }
socket2 = "0.5"
ipnetwork = "0.20"

# CLI and config
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
assert_matches = "1.5"

[[bench]]
name = "handshake"
harness = false
