[package]
name = "quantum-vpn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-rt = "2"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
